--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0-rc01'
-    implementation 'androidx.core:core:1.3.0'
+    implementation 'androidx.core:core:1.3.1'
     implementation 'com.squareup.okhttp3:okhttp:4.8.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+    implementation 'com.google.android.material:material:1.1.0'
 
 }
 
