--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -41,6 +42,14 @@ dependencies {
     implementation 'androidx.core:core:1.3.0'
     implementation 'com.squareup.okhttp3:okhttp:4.8.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:27.0.2'
+
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+
 
 }
 
