--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/reco_logo"
         android:supportsRtl="true"
-        android:theme="@style/SplashScreenTheme"
+        android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
             android:name=".view.ui.MainActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/SplashScreenTheme"/>
     </application>
 
 </manifest>
