--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.reco">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,12 +10,11 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/reco_logo"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".view.ui.MainActivity"
             android:exported="true"
-            android:theme="@style/SplashScreenTheme"/>
+            android:theme="@style/SplashScreenTheme" />
     </application>
 
 </manifest>
