Implements and updates core features
- implements navigation graph
- improves code performance
- improves utility shared preferences methods
- simplifies elements of code in main & home activity
- improves overall fragment code

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
             android:name=".view.ui.MainActivity"
             android:exported="true"
             android:theme="@style/SplashScreenTheme" />
+        <activity android:name=".view.ui.HomeActivity"/>
     </application>
 
 </manifest>
