--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="com.reco">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/reco_logo"
@@ -14,8 +13,14 @@
         <activity
             android:name=".view.ui.MainActivity"
             android:exported="true"
-            android:theme="@style/SplashScreenTheme" />
+            android:theme="@style/SplashScreenTheme" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".view.ui.HomeActivity"/>
+
     </application>
 
 </manifest>
